# solo_description

./: CMakeLists.txt  README.md  package.xml
config/: solo_controller_effort.yaml
xacro/: leg.xacro  plane_with_restitution.urdf.xacro  solo12.urdf.xacro  solo12_gazebo.xacro  solo8.urdf.xacro  solo_control.xacro  solo_gazebo.xacro
