<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>solo_description</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="davide.debenedittis@gmail.com">Davide De Benedittis</maintainer>
    <license>BSD-3-clause</license>

    <url>https://github.com/ddebenedittis/solo_description</url>
    <author>Maximilien Naveau</author>
    <author>Davide De Benedittis</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
